--- a/M5_T01.ipynb
+++ b/M5_T01.ipynb
@@ -458,16 +458,83 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f5a5712",
+   "id": "451ebe3a",
    "metadata": {},
    "source": [
-    "- Exercici 1\n",
-    "Descarrega el dataset adjunt de dades oficials de la UEFA i selecciona un atribut del conjunt de dades. Calcula el p-valor i digues si rebutja la hipòtesi nul·la agafant un alfa de 5%. "
+    "#\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Selecciona un atribut del conjunt de dades. Calcula el p-valor i digues si rebutja la hipòtesi nul·la agafant un alfa de 5%. \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 122,
+   "id": "e020c576",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics=9.355, p=0.000\n",
+      "\n",
+      "Different distributions (reject H0, son grupos diferentes )\n",
+      "\n",
+      "Podemos decir con un 5% de margen de error que la estadística xGD (Puntos/Diferencia de Goles) SI explica la diferencia de Ranking  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Veamos  el atributo xGD ( puntos/Diferencia Goles )  \n",
+    "\n",
+    "\n",
+    "# H0:  Top 20xGD  aprox igual que MIN 20xGD\n",
+    "#  \n",
+    "#                         ..dicho de otra forma ...xGD  NO explica las diferencia de Ranking\n",
+    "    \n",
+    " # H1 : xGD SI explica las diferencia de Ranking\n",
+    "\n",
+    "\n",
+    "\n",
+    "Top20xGD = new_df[:20]['xGD'].sort_values(ascending = False)\n",
+    "Min20xGD = new_df[20:]['xGD'].sort_values(ascending = False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "\n",
+    "stat, p = ttest_ind(Top20xGD, Min20xGD)      # TOP20 xGD  Vs MIN20 xGD( varianza INTRAgrupo)\n",
+    "print('Statistics=%.3f, p=%.3f' % (stat, p))\n",
+    "\n",
+    "# interpret\n",
+    "alpha = 0.05\n",
+    "if p > alpha:\n",
+    "    \n",
+    "\tprint('Same distributions (fail to reject H0).\\n\\nPodemos decir con un 5% de margen de error que la estadística xGD NO explica \\nla diferencia de Ranking  ')\n",
+    "else:\n",
+    "\tprint('\\nDifferent distributions (reject H0, son grupos diferentes )\\n\\nPodemos decir con un 5% de margen de error que la estadística xGD (Puntos/Diferencia de Goles) SI explica la diferencia de Ranking  ')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db9399d1",
+   "metadata": {},
+   "source": [
+    "#\n",
+    "\n",
+    "- Exercici 2\n",
+    "Amb el mateix dataset selecciona dos altres atributs del conjunt de dades. Calcula els p-valors i digues si rebutgen la hipòtesi nul·la agafant un alfa de 5%.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "id": "1dadfb71",
    "metadata": {},
    "outputs": [
@@ -484,7 +551,7 @@
     }
    ],
    "source": [
-    "# Veamos si la estadística xGD ( puntos/Diferencia Goles )  Vs Rk\n",
+    "# Veamos esta vez si la estadística xGD ( puntos/Diferencia Goles )  Vs Rk  (varianza ENTREgrupos)\n",
     "\n",
     "\n",
     "# H0: winners ( Top 20Rk ) son tambien los que tiene una mejor estadística (Top 20xGD ) \n",
@@ -516,25 +583,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c007826",
+   "cell_type": "markdown",
+   "id": "aacb6e60",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ddca6dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "634b7e44",
+   "id": "b0297618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 124,
    "id": "def4cddf",
    "metadata": {},
    "outputs": [
@@ -599,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 125,
    "id": "7f29f9f4",
    "metadata": {},
    "outputs": [
@@ -640,20 +699,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "daab3f12",
+   "cell_type": "markdown",
+   "id": "3eb20344",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "87572c66",
    "metadata": {},
    "source": [
-    "- Exercici 2\n",
-    "Amb el mateix dataset selecciona dos altres atributs del conjunt de dades. Calcula els p-valors i digues si rebutgen la hipòtesi nul·la agafant un alfa de 5%.\n",
+    "- Exercici 2 bis\n",
     "\n"
    ]
   },
@@ -763,6 +821,7 @@
    "id": "a9058c13",
    "metadata": {},
    "source": [
+    "#\n",
     "- Exercici 3\n",
     "Continua amb el conjunt de dades adjunt i selecciona tres atributs del conjunt de dades. Calcula el p-valor i digues si rebutja la hipòtesi nul·la agafant un alfa de 5%.\n",
     "\n"
@@ -786,16 +845,16 @@
     }
    ],
    "source": [
-    "winners_xGD = data6 = df[:20]['xGD']                                     # Top 20 ( Estadística Puntos/ partido)\n",
-    "winners_xG = data7 = df[:20]['xG']                                          # Top 20 ( Estadística Puntos/ Gol)\n",
+    "# ANOVA ( ENTREgrupos)\n",
+    "\n",
+    "winners_xGD = data6 = df[:20]['xGD']    # Top 20 ( Estadística Puntos/ partido)\n",
+    "winners_xG = data7 = df[:20]['xG']       # Top 20 ( Estadística Puntos/ Gol)\n",
     "winners_GA = data8 = df[(len(df)-20):]['xGA'].sort_values(ascending = False)  # Top 20 (Estadística Puntos/ GolAgainst, equipos menor xGA)\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "# data6() vs data7() vs data8()  : H0 : TOP20 estadística xGD es el mismo TOP20 de mejor estadísticas xG y xGA\n",
-    "\n",
-    "#vs data8()\n",
     "\n",
     "from scipy.stats import f_oneway\n",
     "stat, p = f_oneway( data6, data7, data8)\n",
@@ -816,13 +875,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "c8bb5ffc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "winners_xGD = data6 = df[:20]['xGD']                                     # Top 20 ( Estadística Puntos/ partido)\n",
-    "winners_xG = data7 = df[:20]['xG']                                          # Top 20 ( Estadística Puntos/ Gol)\n",
+    "# Como recordatorio...\n",
+    "\n",
+    "winners_xGD = data6 = df[:20]['xGD']    # Top 20 ( Estadística Puntos/ partido)\n",
+    "winners_xG = data7 = df[:20]['xG']      # Top 20 ( Estadística Puntos/ Gol)\n",
     "winners_GA = data8 = df[(len(df)-20):]['xGA'].sort_values(ascending = False)  # Top 20 (Estadística Puntos/ GolAgainst, equipos menor xGA)\n"
    ]
   },
@@ -844,7 +905,7 @@
     }
    ],
    "source": [
-    "# Anova test 2 grupos TOP 20 xGD  vs TOP20 xG\n",
+    "# Anova test 2 grupos TOP 20 xGD  vs TOP20 xG...\n",
     "\n",
     "\n",
     "from scipy.stats import f_oneway\n",
@@ -919,12 +980,20 @@
    "id": "0b299778",
    "metadata": {},
    "source": [
-    "Tras los tres Test Anova ( 2 grupos) vemos que el grupo  TOP 20 xGD  !=   TOP20 xG\n",
-    "                                           que el grupo  TOP 20 xGD   =   TOP20 xGA\n",
-    "                                           que el grupo  TOP 20 xG    =   TOP20 xGA\n",
+    "#\n",
+    "\n",
+    "Tras los tres Test Anova ( 2 grupos) vemos \n",
+    "\n",
+    "\n",
+    "\n",
+    "que el grupo  TOP 20 xGD  !=   TOP20 xG\n",
+    "\n",
+    "que el grupo  TOP 20 xGD   =   TOP20 xGA\n",
+    "\n",
+    "que el grupo  TOP 20 xG    =   TOP20 xGA\n",
     "        \n",
     "        \n",
-    "Sería suficiente  con conservar xGD y xGA como variables explicativas  y desestimar xG.  \n",
+    "Sería suficiente  con conservar xGD y xGA como variables explicativas  y desestimar xG para explicar el Rkg\n",
     "        \n",
     "        \n",
     "        "
