--- a/M5_T01.ipynb
+++ b/M5_T01.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "451ebe3a",
+   "id": "54e42e3a",
    "metadata": {},
    "source": [
     "#\n",
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "e020c576",
+   "execution_count": 128,
+   "id": "196e4219",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
       "\n",
       "Different distributions (reject H0, son grupos diferentes )\n",
       "\n",
-      "Podemos decir con un 5% de margen de error que la estadística xGD (Puntos/Diferencia de Goles) SI explica la diferencia de Ranking  \n"
+      "Podemos decir con un 5% de margen de error que la estadística xGD (Puntos/Diferencia de Goles) SI es relevante  \n"
      ]
     }
    ],
@@ -518,12 +518,12 @@
     "    \n",
     "\tprint('Same distributions (fail to reject H0).\\n\\nPodemos decir con un 5% de margen de error que la estadística xGD NO explica \\nla diferencia de Ranking  ')\n",
     "else:\n",
-    "\tprint('\\nDifferent distributions (reject H0, son grupos diferentes )\\n\\nPodemos decir con un 5% de margen de error que la estadística xGD (Puntos/Diferencia de Goles) SI explica la diferencia de Ranking  ')\n"
+    "\tprint('\\nDifferent distributions (reject H0, son grupos diferentes )\\n\\nPodemos decir con un 5% de margen de error que la estadística xGD (Puntos/Diferencia de Goles) SI es relevante  ')\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db9399d1",
+   "id": "2a0e8489",
    "metadata": {},
    "source": [
     "#\n",
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aacb6e60",
+   "id": "423767dc",
    "metadata": {},
    "source": [
     "#"
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0297618",
+   "id": "893706e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3eb20344",
+   "id": "c9b98a46",
    "metadata": {},
    "source": [
     "#"
@@ -717,60 +717,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 127,
    "id": "4edbdf26",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3    97\n",
-       "0    96\n",
-       "1    89\n",
-       "8    85\n",
-       "4    85\n",
-       "Name: GF, dtype: int64"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Hipotesis :  equipos con la mejor estadística GF tienen más puntos (GF \"explica\" parte del Pts)\n",
     "# Ha : GF no \"explica\" Pts\n",
     "\n",
     "Top20_Goles= (df[:20]['GF']).sort_values(ascending = False) \n",
     "Top20_Puntos = (df[:20]['Pts']).sort_values(ascending = False)\n",
-    "\n",
-    "Top20_Goles.head(5) #  TOP 20 con la mejor estadística GF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "id": "35ae3306",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    90\n",
-       "1    86\n",
-       "2    85\n",
-       "4    83\n",
-       "5    83\n",
-       "Name: Pts, dtype: int32"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Top20_Puntos.head(5)"
+    "\n"
    ]
   },
   {
