--- a/M5_T01.ipynb
+++ b/M5_T01.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54e42e3a",
+   "id": "c34867e6",
    "metadata": {},
    "source": [
     "#\n",
@@ -472,24 +472,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "196e4219",
+   "execution_count": 132,
+   "id": "89837b78",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Statistics=9.355, p=0.000\n",
+      "Statistics=4.700, p=0.000\n",
       "\n",
       "Different distributions (reject H0, son grupos diferentes )\n",
       "\n",
-      "Podemos decir con un 5% de margen de error que la estadística xGD (Puntos/Diferencia de Goles) SI es relevante  \n"
+      "Podemos decir con un 5% de margen de error que la estadística xGD (Puntos/Diferencia de Goles) SI es relevante para explicar las diferencias entre (TOP 20)xGD y  Seguidores(20 al 40)xGD \n"
      ]
     }
    ],
    "source": [
-    "# Veamos  el atributo xGD ( puntos/Diferencia Goles )  \n",
+    "# Veamos  el atributo xGD ( puntos/Diferencia Goles ) ...Varianza INTRAGRUPO\n",
     "\n",
     "\n",
     "# H0:  Top 20xGD  aprox igual que MIN 20xGD\n",
@@ -501,7 +501,7 @@
     "\n",
     "\n",
     "Top20xGD = new_df[:20]['xGD'].sort_values(ascending = False)\n",
-    "Min20xGD = new_df[20:]['xGD'].sort_values(ascending = False)\n",
+    "AllGD = new_df[20:40]['xGD'].sort_values(ascending = False)\n",
     "\n",
     "\n",
     "\n",
@@ -509,7 +509,7 @@
     "from scipy.stats import ttest_ind\n",
     "\n",
     "\n",
-    "stat, p = ttest_ind(Top20xGD, Min20xGD)      # TOP20 xGD  Vs MIN20 xGD( varianza INTRAgrupo)\n",
+    "stat, p = ttest_ind(Top20xGD, AllGD)      # TOP20 xGD  Vs Seguidores(20 al 40)xGD( varianza INTRAgrupo)\n",
     "print('Statistics=%.3f, p=%.3f' % (stat, p))\n",
     "\n",
     "# interpret\n",
@@ -518,12 +518,12 @@
     "    \n",
     "\tprint('Same distributions (fail to reject H0).\\n\\nPodemos decir con un 5% de margen de error que la estadística xGD NO explica \\nla diferencia de Ranking  ')\n",
     "else:\n",
-    "\tprint('\\nDifferent distributions (reject H0, son grupos diferentes )\\n\\nPodemos decir con un 5% de margen de error que la estadística xGD (Puntos/Diferencia de Goles) SI es relevante  ')\n"
+    "\tprint('\\nDifferent distributions (reject H0, son grupos diferentes )\\n\\nPodemos decir con un 5% de margen de error que la estadística xGD (Puntos/Diferencia de Goles) SI es relevante para explicar las diferencias entre (TOP 20)xGD y  Seguidores(20 al 40)xGD ')\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2a0e8489",
+   "id": "f7a4fc02",
    "metadata": {},
    "source": [
     "#\n",
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "423767dc",
+   "id": "35d39a32",
    "metadata": {},
    "source": [
     "#"
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "893706e5",
+   "id": "79474a53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9b98a46",
+   "id": "62bfc3d3",
    "metadata": {},
    "source": [
     "#"
